--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1072</width>
-    <height>564</height>
+    <width>1212</width>
+    <height>779</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,8 +20,11 @@
       <x>160</x>
       <y>50</y>
       <width>911</width>
-      <height>461</height>
+      <height>261</height>
      </rect>
+    </property>
+    <property name="gridStyle">
+     <enum>Qt::DotLine</enum>
     </property>
     <column>
      <property name="text">
@@ -35,7 +38,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1072</width>
+     <width>1212</width>
      <height>22</height>
     </rect>
    </property>
