--- a/res.qrc
+++ b/res.qrc
@@ -18,5 +18,6 @@
         <file>coin/vol.png</file>
         <file>coin/unvol_c.png</file>
         <file>coin/vol_c.png</file>
+        <file>coin/mymusic .png</file>
     </qresource>
 </RCC>
