--- a/res.qrc
+++ b/res.qrc
@@ -18,6 +18,11 @@
         <file>coin/vol.png</file>
         <file>coin/unvol_c.png</file>
         <file>coin/vol_c.png</file>
-        <file>coin/mymusic .png</file>
+        <file>coin/mymusic.png</file>
+        <file>coin/list.png</file>
+        <file>coin/list_c.png</file>
+        <file>coin/delete.png</file>
+        <file>coin/delete_c.png</file>
+        <file>coin/begin.png</file>
     </qresource>
 </RCC>
